--- a/.github/workflows/wake_up.yml
+++ b/.github/workflows/wake_up.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install selenium
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Python script to wake up Streamlit apps
         run: python wake_up_streamlit.py
